plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1' // Spring Boot 애플리케이션 빌드를 위한 플러그인
    id 'io.spring.dependency-management' version '1.1.7' // Spring 의존성 관리를 위한 플러그인
}

group = 'com.orbit'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17) // Java 17 버전 사용
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral() // Maven Central Repository 사용
    maven { url 'https://jitpack.io' } // JitPack 저장소 추가
}

dependencies {
    // 이메일 전송 기능
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'com.sun.mail:jakarta.mail:2.0.1'

    // 데이터베이스 관련 의존성
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // 웹 애플리케이션 개발을 위한 의존성
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // 웹소켓 기능을 위한 의존성
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // 개발 편의를 위한 도구
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // MariaDB 데이터베이스 드라이버
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

    // 테스트 관련 의존성
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // SQL 로그 출력을 위한 의존성
    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'

    // 데이터 유효성 검사를 위한 의존성
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.4.0'

    // DTO와 Entity 간 변환을 위한 라이브러리
    implementation 'org.modelmapper:modelmapper:3.2.0'

    // Lombok: 반복적인 코드 작성을 줄여주는 라이브러리
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // Spring Security: 인증과 권한 부여를 위한 프레임워크
    implementation 'org.springframework.boot:spring-boot-starter-security:3.3.6'
    testImplementation 'org.springframework.security:spring-security-test'

    // OAuth2 클라이언트 기능을 위한 의존성
    //implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // JWT(Json Web Token) 관련 의존성
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'

    // Swagger: API 문서화 도구
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    // Redis: 인메모리 데이터 구조 저장소
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // JPA 관련 API
    implementation 'jakarta.persistence:jakarta.persistence-api'

    // 포트원(구 아임포트) 결제 모듈
    repositories {
        mavenCentral()
        maven { url 'https://jitpack.io' } // JitPack 저장소 추가
    }
    implementation 'com.github.iamport:iamport-rest-client-java:0.2.23'
}

tasks.named('test') {
    useJUnitPlatform() // JUnit 5 사용
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-parameters" // 메서드 파라미터 이름 보존
}
